--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.86"
 chrono = "0.4.38"
 crossterm = "0.28.1"
 dialoguer = "0.11.0"
+regex = "1.10.6"
 walkdir = "2.5.0"
 whoami = "1.5.1"
 zip = "2.2.0"
